logic for new bugs to match up with and also stop the overlap of bugs on the same cell. New variable names added to make it nmore clear"

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
+  margin-bottom: -30%;
 }
 
 .grid {
